# JARL---Jet-Another-Rom-Library

./: .dockerignore  .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml
backend/: pyproject.toml
backend/app/: __init__.py  auth.py  config.py  database.py  main.py  models.py  schemas.py
backend/app/api/: auth.py  health.py  platforms.py  roms.py  scan.py  scrape.py  users.py
backend/app/scanner/: __init__.py  dedup.py  filesystem.py  parser.py  platforms.py  progress.py
backend/app/scraper/: __init__.py  base.py  batch.py  igdb.py  screenscraper.py
backend/app/utils/: images.py
backend/tests/: __init__.py  conftest.py  test_parser.py  test_platforms.py  test_scanner_filesystem.py
docker/: .env.example  Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  nginx.conf  nginx.frontend.conf
docs/: SUMMARY.md  api.md  architecture.md  authentication.md  configuration.md  development.md  installation.md  platforms.md  quick-start.md  scraper.md  scraping.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.vue
frontend/src/api/: index.ts  platforms.ts  roms.ts  scan.ts  scrape.ts  settings.ts  stats.ts  users.ts
frontend/src/assets/: main.css
frontend/src/components/: FilterBar.vue  PlatformBadge.vue  RomCard.vue  RomGrid.vue  ScanProgress.vue  SearchBar.vue  StatsWidget.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  roms.ts  scan.ts
(+7 files in other folders)
